--- a/Contents/game.css
+++ b/Contents/game.css
@@ -1,3 +1,11 @@
 #canvas {
-    border: 1px black dotted
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 10px 10px rgba(0,0,0,0.3);
+}
+
+footer h3{
+    display: block;
+    text-align: center;
 }
